<resources>
    <string name="app_name">Programmer Calculator</string>
    <string name="convert">Convert</string>
    <string name="bin">Bin</string>
    <string name="oct">OCT</string>
    <string name="dec">DEC</string>
    <string name="hex">HEX</string>
    <string name="convert_from">Convert From</string>
    <string name="enter_the_number">Enter The Number</string>
    <string name="convert_to">Convert To</string>
</resources>